--- a/EksamenRazorPageFixed/EksamenRazorPageFixed.csproj
+++ b/EksamenRazorPageFixed/EksamenRazorPageFixed.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CaseLibrary\CaseLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\MembersImages\" />
+    <Folder Include="wwwroot\Images\EventImages\" />
+    <Folder Include="wwwroot\Images\FrontPageImages\" />
   </ItemGroup>
 
 </Project>
